# slidko

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  __init__.py  debug_chatter.py  debug_chatter2.py  pyproject.toml  test_event_import.py
.github/workflows/: ci.yml
.ruff_cache/0.15.20/: 5045600537054124579  5939547509762492077
docs/: ARCHITECTURE.md  CORPUS.md  DESIGN.md  EXERCISER.md  GLOSSARY.md  ROADMAP.md  TASKS.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: main.c
firmware/src/hw/: dshot.pio  e9_detect.c  e9_detect.h  gpio_lines.c  gpio_lines.h  peripherals.c  peripherals.h  pio_stim.c  pio_stim.h
firmware/src/protocol/: command.c  command.h  dispatcher.c  dispatcher.h  e9_policy.c  e9_policy.h  hazard.c  hazard.h  parser.c  parser.h  timing.c  timing.h
firmware/test/: CMakeLists.txt  test_e9.c  test_hazard.c  test_protocol.c  test_timing.c
openspec/: config.yaml
openspec/changes/: APPLY-ORDER.md
openspec/changes/archive/2026-07-08-dev-tooling-gate/: design.md  tasks.md
openspec/changes/archive/2026-07-08-phase-0-capture-ingest/: design.md  tasks.md
openspec/changes/archive/2026-07-09-bootstrap-python-package/: design.md
openspec/changes/archive/2026-07-09-fix-regression-suite/: proposal.md  tasks.md
openspec/changes/archive/2026-07-09-phase-1-measure-discriminators/: tasks.md
openspec/changes/archive/2026-07-09-phase-2-decode-backend/: design.md  tasks.md
openspec/changes/archive/2026-07-09-phase-3-smoke-detector/: tasks.md
openspec/changes/archive/2026-07-09-phase-4-narrate/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-phase-5-diagnose-loop/: design.md  tasks.md
openspec/changes/archive/2026-07-11-corpus-tooling/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-python-package/: proposal.md  tasks.md
openspec/changes/build-system-evaluation/: design.md  proposal.md  tasks.md
openspec/changes/build-system-evaluation/specs/dev-tooling/: spec.md
openspec/changes/corpus-tooling/: tasks.md
openspec/changes/corpus-tooling/specs/corpus-management/: spec.md
openspec/changes/dev-tooling-gate/: proposal.md  tasks.md
openspec/changes/dev-tooling-gate/specs/dev-tooling/: spec.md
openspec/changes/exerciser-firmware/: design.md  proposal.md  tasks.md
openspec/changes/exerciser-protobuf-wire/: README.md  design.md  proposal.md  tasks.md
openspec/changes/fix-regression-suite/: design.md  proposal.md  tasks.md
openspec/changes/phase-0-capture-ingest/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-measure-discriminators/: design.md  proposal.md  tasks.md
openspec/changes/phase-2-decode-backend/: proposal.md  tasks.md
openspec/changes/phase-3-smoke-detector/: design.md  proposal.md  tasks.md
openspec/changes/phase-4-narrate/: tasks.md
openspec/changes/phase-5-diagnose-loop/: proposal.md  tasks.md
openspec/changes/rust-exerciser-firmware/: design.md  proposal.md  tasks.md
openspec/specs/capture-acquisition/: spec.md
openspec/specs/capture-ingest/: spec.md
openspec/specs/config-pull/: spec.md
openspec/specs/corpus-management/: spec.md
openspec/specs/dev-tooling/: spec.md
openspec/specs/diagnosis/: spec.md
openspec/specs/edge-extraction/: spec.md
openspec/specs/exerciser-firmware/: spec.md
openspec/specs/interval-statistics/: spec.md
openspec/specs/librarian/: spec.md
openspec/specs/narration/: spec.md
openspec/specs/protocol-decode/: spec.md
openspec/specs/protocol-discrimination/: spec.md
openspec/specs/regression-fixes/: spec.md
openspec/specs/smoke-detector/: spec.md
openspec/specs/synthetic-captures/: spec.md
src/slidko/capture/: __init__.py  sigrokcli.py  srfile.py
src/slidko/corpus/: __init__.py  capture_cli.py  field_gold_holdout.py  paths.py  sidecar.py  sweep.py
src/slidko/decode/: __init__.py  _pinning.py  backend.py  decoder_manifest.json  decoder_pin.py  events.py  from_measure.py  native_uart.py  sigrok_backend.py
src/slidko/diagnose/: config_pull.py  diagnose.py  fault_tree.py  instruction.py  llm.py
src/slidko/librarian/: __init__.py  retrieve.py
src/slidko/measure/: analog_video.py  can.py  classify.py  dshot.py  edges.py  i2c.py  intervals.py  pwm.py  smoke.py  spi.py  uart.py  ws2812.py
src/slidko/narrate/: address_book.py  coincidence.py  model.py  narrate.py  receiver_rule.py  transaction_summary.py
tests/: conftest.py  synth.py  test_analog_video_recognition.py  test_can_recognition.py  test_classify.py  test_dshot_recognition.py  test_fault_injection.py  test_i2c_discriminator.py  test_intervals.py  test_package.py  test_pwm_recognition.py  test_spi_discriminator.py  test_synth_i2c.py  test_synth_pwm_dshot.py  test_synth_spi.py  test_synth_uart.py  test_synth_ws2812.py  test_uart_discriminator.py  test_ws2812_recognition.py
tests/capture/: test_model.py  test_sigrokcli.py  test_srfile.py  test_srfile_real_file.py
tests/corpus/: test_capture_cli.py  test_field_gold_holdout.py  test_paths.py  test_sidecar.py  test_sweep.py
tests/decode/: test_backend.py  test_backend_compatibility.py  test_decoder_pin.py  test_e2e.py  test_events.py  test_native_uart.py  test_sigrok_backend.py  test_sigrok_integration.py
tests/diagnose/: test_config_pull.py  test_diagnose.py  test_instruction.py  test_instruction_generation.py  test_llm.py  test_validate.py
tests/fixtures/: README.md
tests/librarian/: test_retrieve.py
tests/librarian/fixtures/: generic-fc.json  matek-f405-wing.json  unknown-clone-board.json
tests/measure/: test_edge_chatter.py  test_edges.py  test_escalation.py  test_incoherence.py  test_run_smoke.py  test_runt_pulses.py  test_smoke_finding.py  test_ws2812_timing.py
tests/narrate/: golden_scenarios.py  regenerate_goldens.py  test_address_book.py  test_assertion.py  test_canonical_schemas.py  test_coincidence.py  test_golden.py  test_narrate.py  test_receiver_rule.py  test_transaction_summary.py
tests/narrate/golden/: healthy_i2c_imu.json  i2c_nak_coincidence.json  ws2812_receiver_rule_killer_case.json
(+19 files in other folders)
