[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slidko"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "C4",  # comprehensions
    "DTZ", # datetime timezone
    "ISC", # implicit string concatenation
    "G",   # logging format
    "PGH", # pygrep hooks
    "PIE", # import
    "PL",  # pylint
    "PT",  # pytest
    "RUF", # ruff specific
    "SIM", # similarity
    "TID", # tidy imports
    "TCH", # type check
]
extend-ignore = [
    "PLR", # design related
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

[tool.pytest.ini_options]
python_files = ["tests/*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
