[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slidko"
version = "0.0.1"
description = "AI-assisted hardware integration debugging tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py311"
lint.extend-select = [
    "I",  # isort
]
lint.preview = true

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]